# rustdesk

./: .gitmodules  Cargo.toml  build.rs
.cargo/: config.toml
libs/clipboard/: Cargo.toml
libs/clipboard/src/: lib.rs
libs/clipboard/src/platform/: mod.rs
libs/clipboard/src/platform/unix/: filetype.rs  mod.rs
libs/enigo/: Cargo.toml
libs/enigo/examples/: mouse.rs
libs/enigo/src/: lib.rs
libs/portable/: Cargo.toml
libs/portable/src/: bin_reader.rs  main.rs
libs/remote_printer/: Cargo.toml
libs/remote_printer/src/: lib.rs
libs/scrap/: Cargo.toml  build.rs
libs/scrap/src/: lib.rs
libs/scrap/src/common/: camera.rs  codec.rs  hwcodec.rs  mod.rs
libs/virtual_display/dylib/src/: lib.rs
libs/virtual_display/src/: lib.rs
src/: auth_2fa.rs  client.rs  clipboard.rs  clipboard_file.rs  common.rs  core_main.rs  flutter.rs  flutter_ffi.rs  ipc.rs  keyboard.rs  lan.rs  lang.rs  lib.rs  main.rs  privacy_mode.rs  rendezvous_mediator.rs  server.rs  service.rs  tray.rs  ui.rs  ui_cm_interface.rs  ui_interface.rs  ui_session_interface.rs  updater.rs
src/client/: io_loop.rs
src/hbbs_http/: http_client.rs  sync.rs
src/platform/: mod.rs
src/plugin/: callback_msg.rs  manager.rs  mod.rs  plugins.rs
src/server/: audio_service.rs  clipboard_service.rs  connection.rs  display_service.rs  input_service.rs  service.rs  terminal_service.rs  video_qos.rs  video_service.rs
src/ui/: cm.rs  remote.rs
src/whiteboard/: client.rs  mod.rs  server.rs
