[package]
name = "scrap"
description = "Screen capture made easy."
version = "0.5.0"
repository = "https://github.com/quadrupleslap/scrap"
documentation = "https://docs.rs/scrap"
keywords = ["screen", "capture", "record"]
license = "MIT"
authors = ["Ram <quadrupleslap@gmail.com>"]
edition = "2018"

[features]
hwcodec = ["dep:hwcodec"]

[dependencies]
cfg-if = "1.0"
num_cpus = "1.15"
lazy_static = "1.4"
hbb_common = { path = "../hbb_common" }
webm = { git = "https://github.com/rustdesk-org/rust-webm" }
serde = {version="1.0", features=["derive"]}

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"

[dev-dependencies]
repng = "0.2"
docopt = "1.1"
quest = "0.3"

[build-dependencies]
target_build_utils = "0.3"
bindgen = "0.65"

[dependencies.hwcodec]
git = "https://github.com/rustdesk-org/hwcodec"
optional = true
